--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -11,17 +11,6 @@ body {
   }
   
   /* general */
-  
-  .container {
-    width: 100%;
-    max-width: 1200px;
-    margin-right: 175px;
-    margin-left: 175px;
-    padding-left: 45px;
-    padding-top: 10px;
-
-    clear: both;
-  }
 
   .contact-container {
     width: 100%;
@@ -116,11 +105,9 @@ body {
   }
   
   .main-section {
-    float: left;
-    width: 100%;
     max-width: 960px;
     padding: 30px;
-    margin: 0 0 40px;
+    margin: 0 auto;
     background: #fff;
     border: 1px solid #ddd;
   }
@@ -170,6 +157,14 @@ body {
   /* media query */
   
   @media screen and (max-width: 980px){
+
+    body {
+      font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+      font-size: 18px;
+      line-height: 34px;
+      color: #777;
+      background: url("../../images/concrete_seamless.png");
+    }
     nav {
       float: right;
       margin-top: 25px;
@@ -203,6 +198,15 @@ body {
   }
   
   @media screen and (max-width: 768px){
+
+    body {
+      font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+      font-size: 18px;
+      line-height: 34px;
+      color: #777;
+      background: url("../../images/concrete_seamless.png");
+    }
+   
     nav {
       float: right;
       margin-top: 25px;
@@ -237,6 +241,14 @@ body {
   }
   
   @media screen and (max-width: 640px) {
+
+    body {
+      font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+      font-size: 18px;
+      line-height: 34px;
+      color: #777;
+      background: url("../../images/concrete_seamless.png");
+    }
     nav {
       float: right;
       margin-top: 25px;
