--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,90 +1,168 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 18px;
+  line-height: 34px;
+  color: #777;
+  background: url("../../images/concrete_seamless.png");
+}
+
+/* general */
+
+.container {
+  width: 100%;
+  max-width: 1200px;
+  margin: auto;
+  text-align: center;
+  clear: both;
+}
+
+h1 {
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+p {
+  margin-bottom: 20px;
+  text-align: left;
+}
+
+h2 {
+  margin-bottom: 5px;
+  text-align: center;
+  color: #4aaaa5;
+}
+
+p:last-child {
+  margin-bottom: 0;
+}
+
+h1 {
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-weight: 700;
+  color: #4aaaa5;
+  padding-bottom: 20px;
+  font-size: 30px;
+  line-height: 49px;
+  border-bottom: 3px solid #ddd;
+}
+
+h3 {
+  font-size: 20px;
+  text-align: center;
+  color: #fff;
+  /* vertical-align: middle; */
+}
+/* ************** */
+/* Add padding BETWEEN each column */
+
+.row, .row>.column {
+  padding: 8px;
+}
+/* Create three equal columns that floats next to each other */
+.column {
+  float: left;
+  /* width: 33.33%; */
+  width: 25%;
+  display: flex; /* Hide all elements by default */
+}
+
+/* Clear floats after rows */ 
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Content */
+.content {
+  background-color: #d1d4d4;
+  padding: 15px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px 0 rgba(179, 31, 31, 0.2), 0 6px 20px 0 rgba(104, 29, 29, 0.19);
+  cursor: pointer;
+  text-align: center;
+  color: #777;
+  vertical-align: middle;
+}
+/* ********** */
+
+.contact-container {
+  width: 100%;
+  max-width: 1200px;
+  text-align: center; 
+  clear: both;
+}
+
+.sidebar {
+  align-content: center;
+  text-align: center;
+
+}
+/* footer */
+
+footer {
+  padding: 30px 0;
+  clear: both;
+  font-size: 12px;
+  color: #fff;
+  color: #ccc;
+  text-align: center;
+  background: #666;
+  border-top: 8px solid #4aaaa5;
+  height: 5px;
+}
+
+/* main */
+
+.main-section {
+  max-width: 960px;
+  padding: 30px;
+  margin: 0 auto;
+  background: #fff;
+  border: 1px solid #ddd;
+}
+
+/* portfolio page */
+
+.content img {
+  border-radius: 6px;
+  height: 65%;
+  width: 100%;
+  border: 0 none;
+  cursor: pointer;
+}
+
+.auth-image {
+  float: left;
+  width: 200px;
+  height: auto;
+  margin-top: 20px;
+  margin-right: 50px;
+}
+
+/* media query */
+
+@media screen and (max-width: 980px) {
+  body {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-size: 18px;
     line-height: 34px;
     color: #777;
     background: url("../../images/concrete_seamless.png");
   }
-  
-  * {
-    box-sizing: border-box;
-  }
-  
-  /* general */
-
-  .contact-container {
+ 
+  .container {
     width: 100%;
     max-width: 1200px;
-    text-align: center; 
+    margin: auto;
+    text-align: center;
     clear: both;
   }
-  
-  h1 {
-    margin-bottom: 20px;
-    text-align: center;
-  }
 
-  p {
-    margin-bottom: 20px;
-    text-align: left;
-  }
-  
-  h2 {
-    margin-bottom: 5px;
-    text-align: center;
-    color: #4aaaa5;
-  }
-
-  p:last-child {
-    margin-bottom: 0;
-  }
-  
-  h1 {
-    font-family: Georgia, Times, "Times New Roman", serif;
-    font-weight: 700;
-    color: #4aaaa5;
-  }
-  
-  h1 {
-    padding-bottom: 20px;
-    font-size: 30px;
-    line-height: 49px;
-    border-bottom: 3px solid #ddd;
-  }
-  
-  h3 {
-    font-size: 20px;
-    text-align: left;
-  }
-  
-  /* header */
-  
-  #mainheader {
-  
-    position: fixed;
-    z-index: 99;
-    width: 100%;
-    margin: 0 0 30px;
-    overflow: auto;
-    color: #fff;
-    background: #fff;
-    border-bottom: 2px solid #ccc;
-  }
-
-  .sidebar {
-    align-content: center;
-    text-align: center;
-
-  }
-  
-  
-  nav {
-    float: right;
-    margin-top: 25px;
-  }
-  
-  /* footer */
-  
   footer {
     padding: 30px 0;
     clear: both;
@@ -94,190 +172,122 @@ body {
     text-align: center;
     background: #666;
     border-top: 8px solid #4aaaa5;
-    height: 5px;
+    height: 50px;
   }
-  
-  /* main */
-  
-  #main-container {
-    padding-top: 30px;
-    min-height: calc(100vh - 70px);
+}
+
+@media screen and (max-width: 768px) {
+  nav {
+    float: right;
+    margin-top: 25px;
   }
-  
-  .main-section {
-    max-width: 960px;
-    padding: 30px;
-    margin: 0 auto;
-    background: #fff;
-    border: 1px solid #ddd;
+  nav a {
+    display: inline-block;
+    padding-left: 15px;
+    margin-left: 15px;
+    line-height: 18px;
+    /* color: #999; */
+    color: blue;
+    text-decoration: none;
+    border-left: 1px solid #efefef;
   }
-  
-  /* portfolio page */
-  
-  .work {
-    position: relative;
-    float: left;
-    width: 274px;
-    margin: 20px 0 25px;
-    overflow: auto;
+  nav a:first-child {
+    border-left: 0 none;
   }
-  
-  .work:nth-child(even) {
-    margin-right: 39px;
-  }
-  
-  .work img {
+  .container {
     width: 100%;
-    border: 0 none;
-    /* opacity: 1; */
-  }
-  
-  .work h3 {
-    position: absolute;
-    bottom: 20px;
-    width: 100%;
-    padding: 15px;
-    margin-bottom: 0;
-    font-weight: 300;
-    line-height: 10px;
-    color: #fff;
+    max-width: 1200px;
+    margin: auto;
     text-align: center;
-    background: #4aaaa5;
-    border-bottom: 0;
+    clear: both;
   }
-  
-  .auth-image {
-    float: left;
-    width: 200px;
-    height: auto;
-    margin-top: 20px;
-    margin-right: 50px;
-  }
-  
-  /* media query */
-  
-  @media screen and (max-width: 980px){
 
-    body {
-      font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-      font-size: 18px;
-      line-height: 34px;
-      color: #777;
-      background: url("../../images/concrete_seamless.png");
-    }
-    nav {
-      float: right;
-      margin-top: 25px;
-    }
-    
-    nav a {
-      display: inline-block;
-      padding-left: 15px;
-      margin-left: 15px;
-      line-height: 18px;
-      color: #999;
-      text-decoration: none;
-      border-left: 1px solid #efefef;
-    }
-    
-    nav a:first-child {
-      border-left: 0 none;
-    }
-    footer {
-      padding: 30px 0;
-      clear: both;
-      font-size: 12px;
-      color: #fff;
-      color: #ccc;
-      text-align: center;
-      background: #666;
-      border-top: 8px solid #4aaaa5;
-      height: 50px;
-    }
-  
+  footer {
+    padding: 30px 0;
+    clear: both;
+    font-size: 12px;
+    color: #fff;
+    color: #ccc;
+    text-align: center;
+    background: purple;
+    border-top: 8px solid #4aaaa5;
+    height: 50px;
   }
-  
-  @media screen and (max-width: 768px){
+}
 
-    body {
-      font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-      font-size: 18px;
-      line-height: 34px;
-      color: #777;
-      background: url("../../images/concrete_seamless.png");
-    }
-   
-    nav {
-      float: right;
-      margin-top: 25px;
-    }
-    
-    nav a {
-      display: inline-block;
-      padding-left: 15px;
-      margin-left: 15px;
-      line-height: 18px;
-      /* Just to show color purple screen with 768: */
-      color: purple;
-      text-decoration: none;
-      border-left: 1px solid #efefef;
-    }
-    
-    nav a:first-child {
-      border-left: 0 none;
-    }
-    footer {
-      padding: 30px 0;
-      clear: both;
-      font-size: 12px;
-      color: #fff;
-      color: #ccc;
-      text-align: center;
-      background: purple;
-      border-top: 8px solid #4aaaa5;
-      height: 50px;
-    }
-    
+@media screen and (max-width: 640px) {
+  nav {
+    float: right;
+    margin-top: 25px;
   }
-  
-  @media screen and (max-width: 640px) {
+  nav a {
+    display: inline-block;
+    padding-left: 15px;
+    margin-left: 15px;
+    line-height: 18px;
+    /* color: #999; */
+    color: blue;
+    text-decoration: none;
+    border-left: 1px solid #efefef;
+  }
+  nav a:first-child {
+    border-left: 0 none;
+  }
+  .container {
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
+    text-align: center;
+    clear: both;
+  }
+  footer {
+    padding: 30px 0;
+    clear: both;
+    font-size: 12px;
+    color: #fff;
+    color: #ccc;
+    text-align: center;
+    background: blue;
+    border-top: 8px solid #4aaaa5;
+    height: 50px;
+  }
+}
 
-    body {
-      font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-      font-size: 18px;
-      line-height: 34px;
-      color: #777;
-      background: url("../../images/concrete_seamless.png");
-    }
-    nav {
-      float: right;
-      margin-top: 25px;
-    }
-    
-    nav a {
-      display: inline-block;
-      padding-left: 15px;
-      margin-left: 15px;
-      line-height: 18px;
-      /* color: #999; */
-      color: blue;
-      text-decoration: none;
-      border-left: 1px solid #efefef;
-    }
-    
-    nav a:first-child {
-      border-left: 0 none;
-    }
-    footer {
-      padding: 30px 0;
-      clear: both;
-      font-size: 12px;
-      color: #fff;
-      color: #ccc;
-      text-align: center;
-      background: blue;
-      border-top: 8px solid #4aaaa5;
-      height: 50px;
-    }
+@media screen and (max-width: 450px) {
+  nav {
+    float: right;
+    margin-top: 25px;
   }
-  
+  nav a {
+    display: inline-block;
+    padding-left: 15px;
+    margin-left: 15px;
+    line-height: 18px;
+    /* Just to show color purple screen with 768: */
+    color: purple;
+    text-decoration: none;
+    border-left: 1px solid #efefef;
+  }
+  nav a:first-child {
+    border-left: 0 none;
+  }
+
+  .container {
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
+    text-align: center;
+    clear: both;
+  }
+  footer {
+    padding: 30px 0;
+    clear: both;
+    font-size: 12px;
+    color: #fff;
+    color: #ccc;
+    text-align: center;
+    background: purple;
+    border-top: 8px solid #4aaaa5;
+    height: 50px;
+  }
+}
